Change history
--------------

Release Candidate 3
===================

- Fixed MR-224
  "ARDataBindAttribute does not set the Controllers validator on it's DataBinder"

- Fixed MR-219
  "FormHelper.Select with an interface datasource throws an Object mismatch exception."

- Applied chris ortman's patch fixing MR-188
  "Allow the #component directive to support variables for the component name"

- Fixed MR-208
  "Using a lazy loaded nested object, "Ambiguous match found" exception occures when 
   trying to use FormHelper to render control for the nested objects property."

- Applied goodwill's patch fixing MR-213
  "DiggStylePagination has a typo which prevents the code from build"

- Applied Edward Kreis' patch fixing MR-214
  "ARDataBinding and joined subclasses with derived BelongsTo, HasMany, HasAndBelongsToMany proeprties"

- Fixed MR-217 
  "fValidate box message contains <BR/> if being triggered twice"

- Fixed MR-221
  "HtmlHelper.LinkToAttributed bug"

- Applied Jacob Lewallen's patch adding an optional attribute to define a view component's name
  The patch also introduces a IViewComponentTree.

- Added 'noaction' parameter to FormHelper.FormTag to prevent action attribute generation

- Added Select list from Enum.

	in controller:
		PropertyBag.Add("colors",Enum.GetValues(typeof(ColorEnum)));

	in view:
		$Form.Select("Color", $colors)

- Applied Chris Ortman's patch adding MooHelper/JS generation based on it.

- Applied Jacob Lewallen's patch adding virtuals to some FormHelper methods

- Applied Patrick McEvoy's patch with a new approach to delete cookies

- Added 

	SmartDispatcherController.ValidationSummaryPerInstance : IDictionary
	SmartDispatcherController.GetErrorSummary(object instance) : ErrorSummary
	SmartDispatcherController.HasValidationError(object instance) : bool
	
  Those can be used if DataBinder is configured to validate

- Added Controller.RedirectToReferer
