@@ -46,7 +46,7 @@ namespace Castle.MonoRail.Framework.Internal
 
 			String wizardName = WizardUtils.ConstructWizardNamespace(controller);
 
-			IList stepList = (IList) context.UnderlyingContext.Items["wizard.step.list"];
+			IList stepList = (IList) context.Items["wizard.step.list"];
 
 			int currentIndex = (int) context.Session[wizardName + "currentstepindex"];
 						
@@ -61,7 +61,7 @@ namespace Castle.MonoRail.Framework.Internal
 
 			int curIndex = (int) context.Session[wizardName + "currentstepindex"];
 
-			IList stepList = (IList) context.UnderlyingContext.Items["wizard.step.list"];
+			IList stepList = (IList) context.Items["wizard.step.list"];
 
 			if ((curIndex - 1) >= 0)
 			{
@@ -79,7 +79,7 @@ namespace Castle.MonoRail.Framework.Internal
 
 			int curIndex = (int) context.Session[wizardName + "currentstepindex"];
 
-			IList stepList = (IList) context.UnderlyingContext.Items["wizard.step.list"];
+			IList stepList = (IList) context.Items["wizard.step.list"];
 
 			if ((curIndex + 1) < stepList.Count)
 			{
@@ -93,7 +93,7 @@ namespace Castle.MonoRail.Framework.Internal
 		{
 			IRailsEngineContext context = controller.Context;
 
-			IList stepList = (IList) context.UnderlyingContext.Items["wizard.step.list"];
+			IList stepList = (IList) context.Items["wizard.step.list"];
 
 			for(int i=0; i < stepList.Count; i++)
 			{
